Closed
Bug 194335
Opened 22 years ago
Closed 22 years ago
crash in MailboxIsNoSelectMailbox() when moving a folder by dnd, m_imapServerSink was null
Categories
(MailNews Core :: Database, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.4alpha
People
(Reporter: sspitzer, Assigned: sspitzer)
Details
crash in MailboxIsNoSelectMailbox, m_imapSink null
just ran into this, no details yet.
I was dragging and dropping a folder to another folder.
nsImapProtocol::MailboxIsNoSelectMailbox(const char * 0x03d07460) line 5661 +
28 bytes
nsImapProtocol::RenameHierarchyByHand(const char * 0x03d07460, const char *
0x04461c30) line 5753 + 36 bytes
nsImapProtocol::OnMoveFolderHierarchy(const char * 0x03d07460) line 6102 + 22
bytes
nsImapProtocol::ProcessAuthenticatedStateURL() line 6953
nsImapProtocol::ProcessCurrentURL() line 1374
nsImapProtocol::ImapThreadMainLoop() line 1193 + 14 bytes
nsImapProtocol::Run(nsImapProtocol * const 0x03a3141c) line 948
nsThread::Main(void * 0x03d07408) line 118 + 26 bytes
_PR_NativeRunThread(void * 0x04592188) line 433 + 13 bytes
_threadstartex(void * 0x0469f8c8) line 212 + 13 bytes
KERNEL32! 77e887dd()
| Assignee | ||
Comment 1•22 years ago
|
||
I'm not able to reproduce this, of course.
but I got a bullet proof patch.
Summary: crash in MailboxIsNoSelectMailbox, m_imapSink null → crash in MailboxIsNoSelectMailbox() when moving a folder by dnd, m_imapServerSink was null
| Assignee | ||
Comment 2•22 years ago
|
||
to nsImapProtocol.cpp,
+ if (m_imapServerSink)
m_imapServerSink->FolderIsNoSelect(name, &rv);
note, we bullet proof on m_imapServerSink in other places in nsImapProtocol.cpp
when the tree opens for 1.4, I'll get a review and land it.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.4alpha
| Assignee | ||
Comment 3•22 years ago
|
||
I've checked in some bullet proofing, that if I hit it again, it will point me
back to this bug.
marking fixed for now, until I have way to reproduce the assertion (used to crash).
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•