bullet proofing for crasher bug #194335. some additional code clean up (found while reviewing bug #190106. r/sr=bienvenu